paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.compile.log
error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:7:20
    |
  7 |         if TypeId::of_val(&temp) == TypeId::of::<i32>() {
    |                    ^^^^^^ function or associated item not found in `TypeId`
...
 33 |     if type_id!(x) != 1 {
    |        ----------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:9:27
    |
  9 |         } else if TypeId::of_val(&temp) == TypeId::of::<AtomicI32>() {
    |                           ^^^^^^ function or associated item not found in `TypeId`
...
 33 |     if type_id!(x) != 1 {
    |        ----------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:7:20
    |
  7 |         if TypeId::of_val(&temp) == TypeId::of::<i32>() {
    |                    ^^^^^^ function or associated item not found in `TypeId`
...
 36 |     if type_id!(ax) != 3 {
    |        ------------ in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:9:27
    |
  9 |         } else if TypeId::of_val(&temp) == TypeId::of::<AtomicI32>() {
    |                           ^^^^^^ function or associated item not found in `TypeId`
...
 36 |     if type_id!(ax) != 3 {
    |        ------------ in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:7:20
    |
  7 |         if TypeId::of_val(&temp) == TypeId::of::<i32>() {
    |                    ^^^^^^ function or associated item not found in `TypeId`
...
 40 |     if type_id!(cx) != 1 {
    |        ------------ in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:9:27
    |
  9 |         } else if TypeId::of_val(&temp) == TypeId::of::<AtomicI32>() {
    |                           ^^^^^^ function or associated item not found in `TypeId`
...
 40 |     if type_id!(cx) != 1 {
    |        ------------ in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:7:20
    |
  7 |         if TypeId::of_val(&temp) == TypeId::of::<i32>() {
    |                    ^^^^^^ function or associated item not found in `TypeId`
...
 43 |     if type_id!(ax.load(Ordering::SeqCst)) != 1 {
    |        ----------------------------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2/sample_005/target.rs:9:27
    |
  9 |         } else if TypeId::of_val(&temp) == TypeId::of::<AtomicI32>() {
    |                           ^^^^^^ function or associated item not found in `TypeId`
...
 43 |     if type_id!(ax.load(Ordering::SeqCst)) != 1 {
    |        ----------------------------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0599`.